--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "expo": "~40.0.0",
     "expo-google-app-auth": "^8.1.4",
     "expo-status-bar": "~1.0.3",
-    "firebase": "^8.2.9",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "~1.13.0",
