--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-svg": "^12.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.15.5",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
