--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-google-app-auth": "^8.1.4",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.3.1",
+    "npm": "^6.14.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
