--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "^3.4.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^10.8.1",
+    "@react-native-picker/picker": "^1.14.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
@@ -25,6 +26,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-dropdown-picker": "^4.0.4",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-onboarding-swiper": "^1.1.4",
