--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "^40.0.1",
     "expo-google-app-auth": "^8.1.4",
     "expo-status-bar": "~1.0.3",
+    "expo-updates": "~0.4.1",
     "firebase": "^8.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
