--- a/package.json
+++ b/package.json
@@ -8,34 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.2",
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/datetimepicker": "^3.4.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^10.8.1",
-    "@react-native-picker/picker": "^1.14.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
     "expo-google-app-auth": "^8.1.4",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.3.1",
-    "npm": "^6.14.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-circular-progress": "^1.3.7",
-    "react-native-dropdown-picker": "^4.0.4",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-onboarding-swiper": "^1.1.4",
-    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-svg": "^12.1.0",
-    "react-native-web": "^0.15.5",
+    "react-native-web": "~0.13.12",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
