--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~1.13.0",
