--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-circular-progress": "^1.3.7",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.3"
   },
