--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-dropdown-menu": "^2.0.0",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-onboarding-swiper": "^1.1.4",
